--- a/app/src/main/res/layout/content_contact_us.xml
+++ b/app/src/main/res/layout/content_contact_us.xml
@@ -27,6 +27,7 @@
             android:id="@+id/name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/usersilhouette"
             android:layout_marginLeft="10dp"
             android:layout_weight=".75" />
     </LinearLayout>
@@ -52,6 +53,7 @@
             android:id="@+id/mail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/usermail"
             android:layout_marginLeft="10dp"
             android:layout_weight=".75" />
     </LinearLayout>
@@ -79,6 +81,7 @@
             android:inputType="textMultiLine"
             android:lines="3"
             android:layout_marginLeft="10dp"
+            android:drawableLeft="@drawable/userwriting"
             android:layout_weight=".75" />
     </LinearLayout>
     <LinearLayout
@@ -86,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="240dp"
         android:orientation="horizontal"
-        android:padding="10dp"
+        android:padding="5dp"
         android:weightSum="1"
         android:gravity="right"
         app:layout_constraintTop_toTopOf="parent">
@@ -94,8 +97,10 @@
         <Button
             android:id="@+id/send"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:background="?attr/colorAccent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:text="send" />
 
     </LinearLayout>
