--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
-
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -25,10 +23,6 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-
-
-
-
     <style name="NewsAppThemeDark" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#000</item>
         <item name="colorPrimaryDark">#000</item>
@@ -38,10 +32,10 @@
         <item name="android:textSize">14dp</item>
         <item name="android:textColor">#ffffff</item>
         <item name="colorButtonNormal">#000000</item>
+
+        <item name="colorControlActivated">#dc8f41</item>
+        <item name="colorControlNormal">#09ce3d</item>
     </style>
-
-
-
 
     <style name="NewsAppThemeLight" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#fff</item>
@@ -52,6 +46,9 @@
         <item name="android:textSize">14dp</item>
         <item name="android:textColor">#000000</item>
         <item name="colorButtonNormal">#ffffff</item>
+
+        <item name="colorControlActivated">#dc8f41</item>
+        <item name="colorControlNormal">#09ce3d</item>
     </style>
 
 
