--- a/app/src/main/res/layout/content_test.xml
+++ b/app/src/main/res/layout/content_test.xml
@@ -14,13 +14,17 @@
         android:layout_height="match_parent"
         tools:context="at.telvla.cricket.CurrentNews">
 
-        <WebView
-            android:id="@+id/webView"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            />
+        <TextView
+            android:id="@+id/tv_check_connection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Connection establised !"
+            android:padding="25dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:gravity="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </RelativeLayout>
 
