--- a/app/src/main/res/layout/content_test.xml
+++ b/app/src/main/res/layout/content_test.xml
@@ -19,12 +19,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Connection establised !"
-            android:padding="25dp"
+            android:padding="7dp"
             app:layout_constraintBottom_toBottomOf="parent"
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_alignParentBottom="true"
+            />
 
     </RelativeLayout>
 
